--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -13,9 +13,9 @@
   background-color: #fff;
   margin: auto;
   border-radius: 10px;
-  -webkit-box-shadow: 0px 7px 40px 2px rgba(0,0,0,0.55);
-  -moz-box-shadow: 0px 7px 40px 2px rgba(0,0,0,0.55);
-  box-shadow: 0px 7px 40px 2px rgba(0,0,0,0.55);
+  -webkit-box-shadow: 0px 7px 40px 2px rgba(0, 0, 0, 0.55);
+  -moz-box-shadow: 0px 7px 40px 2px rgba(0, 0, 0, 0.55);
+  box-shadow: 0px 7px 40px 2px rgba(0, 0, 0, 0.55);
   padding: 30px 50px;
   text-align: center;
 }
@@ -36,7 +36,7 @@
   text-align: left;
   text-transform: uppercase;
   margin-bottom: 8px;
-  position:relative;
+  position: relative;
 }
 
 .label > span {
@@ -45,15 +45,15 @@
   color: #3095c1;
 }
 
-.label > span:hover{
+.label > span:hover {
   cursor: pointer;
 }
 
-.pw_error{
- color: red;
- font-style: italic;
- text-align: left;
- height: 1em;
+.pw_error {
+  color: red;
+  font-style: italic;
+  text-align: left;
+  line-height: 1.2;
 }
 
 .input input {
@@ -91,7 +91,7 @@
   background-color: #007b04;
 }
 
-.buttonHolder button.disabled{
+.buttonHolder button.disabled {
   color: #d7dce0;
   background-color: #FAFAFA;
   border: 1px solid #d7dce0;
