OW-624 - datepicker in agreements create - changed Net amt and amt to Adj value and value

--- a/index.template.ejs
+++ b/index.template.ejs
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="css/react-dropzone/filepicker.css">
     <link rel="stylesheet" href="css/react-dropzone/filepickerRecon.css">
     <link rel="stylesheet" href="css/react-select/react-select.css">
+    <!--<link rel="stylesheet" href="css/react-datepicker/react-datepicker.css">-->
+
 
 </head>
 <body>
