--- a/src/components/unmatched_portfolio/UnmatchedPortfolio.css
+++ b/src/components/unmatched_portfolio/UnmatchedPortfolio.css
@@ -74,3 +74,20 @@
     background-color: grey;
     cursor: not-allowed;
 }
+
+.closeBtn {
+  color: #4A4A4A;
+  font-size: 1.5em;
+  cursor: pointer;
+
+  /*as flex parent*/
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+  align-content: center;
+
+  /*as flex child of .popupContainer*/
+  flex: 1 0 auto;
+  padding-right: 15px;
+}
