--- a/src/components/SymphonyChat/Chat.css
+++ b/src/components/SymphonyChat/Chat.css
@@ -34,6 +34,8 @@
   background-color: #f6f7f9;
   display: flex;
   justify-content: space-between;
+  min-height: 35px;
+  cursor: pointer;
 }
 
 .controlBar > div {
