--- a/src/components/margin-call/sub-components/VariableCheckbox.css
+++ b/src/components/margin-call/sub-components/VariableCheckbox.css
@@ -1,5 +1,5 @@
 .variableCheckboxContainer {
-  border: 1px solid rgba(0,0,0,0.1);
+  /*border: 1px solid rgba(0,0,0,0.1);*/
   background-color: #2C3B4A;
   border-radius: 2px;
   padding: 0 8px 0 3px;
@@ -10,6 +10,11 @@
   line-height: 27px;
   height: 27px;
   position: relative;
+  cursor: pointer;
+}
+
+.variableCheckboxContainer:hover {
+  background-color: rgba(255,255,255,0.2);
 }
 
 .checkboxArrowContainer{
@@ -23,6 +28,7 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  margin-top: 5px;
 }
 
 .arrow{
