OW-870 - currency selector stylings

--- a/src/components/graph/Graph.css
+++ b/src/components/graph/Graph.css
@@ -44,13 +44,26 @@
 
 /* for currency sslector **/
 .currencySelector {
+
+  padding: 10px 25px 10px 10px;
+  margin-left: 10px;
+  border-radius: 8px;
+  width: 35px;
+
+  background-color: #fff;
+  /*color: #353535;*/
+  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.5);
+  composes: baseFontBold from './../../static/css-components/fonts.css';
+  text-align: center;
+
   color: #4A90e2;
   position: absolute;
   top: 5px;
-  right: 5px;
-  width: 50px;
-  text-align: left;
+  right: 10px;
+  /*width: 50px;*/
+  /*text-align: left;*/
   cursor: pointer;
+  /*padding-right: 25px;*/
 }
 
 .currencySelector:hover {
@@ -70,8 +83,8 @@
   outline: none;
   padding: 3px 0;
   position: absolute;
-  top: 15px;
-  left: 0px;
+  top: 30px;
+  right: 0px;
   z-index: 100;
 }
 
@@ -90,4 +103,28 @@
 
 .listItem:hover {
   background-color: #eee;
+}
+
+.arrow::before {
+  content: '';
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 8px 8px 0 8px;
+  border-color: #4A90e2 transparent transparent transparent;
+  position: absolute;
+  top: 15px;
+  right: 6px;
+}
+
+.arrow::after {
+  content: '';
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 8px 8px 0 8px;
+  border-color: #fff transparent transparent transparent;
+  position: absolute;
+  top: 12px;
+  right: 6px;
 }
