--- a/src/components/table/Table.css
+++ b/src/components/table/Table.css
@@ -53,6 +53,16 @@
     display: table-cell;
     vertical-align: middle;
 }
+
+.cellHolder {
+  display: flex;
+}
+
+.cell {
+  padding: 0 4px;
+  align-self: center;
+}
+
 .table .margin{
   line-height: 1em;
 }
