--- a/src/components/table/sub-components/TableRow.css
+++ b/src/components/table/sub-components/TableRow.css
@@ -1,6 +1,7 @@
 .directionCont {
   width: 35px;
   padding: 4px;
+  text-align: center;
 }
 
 .directionOut {
@@ -18,6 +19,7 @@
   width: 24px;
   padding: 4px;
   color: #FFFFFF;
+  text-align: center;
 }
 
 .statusExpected {
