--- a/src/components/pledge-selection/popup-allocate.css
+++ b/src/components/pledge-selection/popup-allocate.css
@@ -6,7 +6,7 @@
   width: 100%;
 
   display: flex;
-  flex-direction: row;
+  /*flex-direction: row;*/
   justify-content: center;
   align-items: center;
   z-index: 1;
@@ -15,16 +15,18 @@
 .popup{
  color: black;
  background-color: white;
- width: 420px;
- height: 220px;
+ /*width: 420px;*/
+ /*height: 220px;*/
  border: 1px solid #1c2124;
  border-radius: 5px;
- padding: 10px;
+ padding: 10px 50px;
  position: relative;
 }
 
 .closePopup{
- text-align: right;
+  position: absolute;
+  right: 10px;
+  top: 10px;
 }
 .closePopup > span{
  cursor: pointer;
@@ -34,7 +36,7 @@
 
 .row{
  display: flex;
- flex-direction: row;
+ /*flex-direction: row;*/
  flex: 1 0 auto;
 }
 
@@ -42,7 +44,7 @@
  margin-top: 13px;
  margin-right: 10px;
  display: flex;
- flex-direction: row;
+ /*flex-direction: row;*/
  align-items: center;
 }
 
@@ -59,23 +61,20 @@
 }
 
 .lastRow{
- position: absolute;
- bottom: 10px;
- right: 10px;
+  justify-content: flex-end;
 }
 
-.allocateBtn{
+.row .allocateBtn{
  background-color: green;
  color: white;
  border-radius: 18px;
 
- display: flex;
- flex-direction: row;
- justify-content: center;
- align-items: center;
+ /*display: flex;*/
+ /*flex-direction: row;*/
+ /*justify-content: center;*/
+ /*align-items: center;*/
 
- width: 120px;
- height: 36px;
+ padding: 10px 20px;
 
  cursor: pointer;
 }
