OW-935 - included optimisation widget - todo: remove toggle all checkbox

--- a/src/pages/assets_deployed/DeployedPage.css
+++ b/src/pages/assets_deployed/DeployedPage.css
@@ -1,8 +1,14 @@
-.page{
- display: flex;
- flex-direction: column;
+.page {
+  display: flex;
+  flex-direction: column;
 }
 
-.footer{
- align-self: flex-start;
+.footer {
+  align-self: flex-start;
+}
+
+.optContainer {
+  width: 60%;
+  max-width: 930px;
+  align-self: center;
 }
