upload error fixes styling fixes for upload

--- a/src/static/react-dropzone/dropzone.css
+++ b/src/static/react-dropzone/dropzone.css
@@ -339,7 +339,7 @@
 .dropzone .dz-preview .dz-details .dz-filename {
   /*white-space: nowrap;*/
   /* Max width for 5 files*/
-  width: 170px;
+  /*width: 170px;*/
   /*width: 190px;*/
   margin-top: 10px;
 }
